# corine2wrfClm

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac
src/: Makefile.am  clm.cc  clm.h  coordinate.cc  coordinate.h  corine.cc  corine.h  corine2wrfClm.cc  fractions.cc  fractions.h  fractions_test.cc  geoRaster.cc  geoRaster.h  modis.cc  modis.h  notClmFractions.cc  notClmFractions.h  shapeFile.cc  shapeFile.h  usgs.cc  usgs.h  wrf.cc  wrf.h  wrfFile.cc  wrfFile.h
