bin_PROGRAMS = corine2wrfClm
corine2wrfClm_SOURCES = coordinate.cc coordinate.h \
		      geoRaster.cc  geoRaster.h  \
		      usgs.cc       usgs.h       \
		      corine.cc     corine.h     \
		      wrfFile.cc    wrfFile.h    \
		      modis.cc      modis.h      \
		      corine2wrfClm.cc           \
		      clm.cc        clm.h        \
		      fractions.cc  fractions.h  \
		      notClmFractions.cc notClmFractions.h

